<resources>
    <string name="app_name">My routine 2</string>
    <string name="notes">Notes</string>
    <string name="enter_note">Enter note</string>
    <string name="add_sample_data">Add sample data</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="new_note">New note</string>
    <string name="edit_item">Edit item</string>


    <string name="sample_paged_list">PagedList Sample</string>
    <string name="sample_paged_list_descr">PageListAdapter</string>
    <string name="sample_simple_item_list">SimpleItemList Sample</string>
    <string name="sample_simple_item_list_descr">Filter, Drag&amp;Drop</string>
    <string name="sample_swipe_list">SwipeList Sample (delayed)</string>
    <string name="sample_swipe_list_descr">Swipe, leave-behinds and actions</string>
    <string name="sample_swipe_drawer_list">SwipeList Sample (drawer)</string>
    <string name="sample_swipe_drawer_list_descr">Swipe, buttons and actions</string>
    <string name="sample_icon_grid">IconGrid Sample</string>
    <string name="sample_icon_grid_descr">Grid, Expandable</string>
    <string name="sample_image_list">ImageList Sample</string>
    <string name="sample_image_list_descr">View Click Listener</string>
    <string name="sample_multi_select">MultiSelect Sample</string>
    <string name="sample_multi_select_descr">MultiSelect, CAB, Remove, Undo</string>
    <string name="sample_collapsible_multi_select_delete">Expandable MultiSelect Delete Sample</string>
    <string name="sample_collapsible_multi_select_delete_descr">Expandable, MultiSelect, CAB, Remove</string>
    <string name="sample_collapsible">Expandable Sample</string>
    <string name="sample_collapsible_descr">Expandable, Select</string>
    <string name="sample_sticky_header">StickyHeader Sample</string>
    <string name="sample_sticky_header_descr">StickyHeader, Select</string>
    <string name="sample_advanced">Advanced Sample</string>
    <string name="sample_advanced_descr">Header, StickyHeader, Expandable, CAB, MultiSelect</string>
    <string name="sample_model_item">ModelItem Sample</string>
    <string name="sample_model_item_descr">Split up Item and Model</string>
    <string name="sample_multi_model_item">MultiModelItem Sample</string>
    <string name="sample_multi_model_item_descr">Split up multiple Items and Models in one ModelAdapter</string>
    <string name="sample_checkbox_item">CheckBox Sample</string>
    <string name="sample_checkbox_item_descr">Use FastAdapters internal state with a CheckBox</string>
    <string name="sample_radiobutton_item">RadioButton Sample</string>
    <string name="sample_endless_scroll_item">EndlessScroll Sample</string>
    <string name="sample_radiobutton_item_descr">Use FastAdapters internal state with a RadioButton</string>
    <string name="sample_endless_scroll_list">EndlessScroll Sample</string>
    <string name="sample_endless_scroll_list_descr">EndlessScroll, Progress</string>
    <string name="sample_sort">Sort Sample</string>
    <string name="sample_sort_descr">Simply sort your items by providing a Comparator</string>
    <string name="sample_mopub">Mopub Ads Sample</string>
    <string name="sample_sticky_header_mopub">StickyHeader Mopub Ads Sample</string>
    <string name="sample_mopub_descr">Simply mopub adapter usage example</string>
    <string name="sample_sticky_header_mopub_descr">Simple sticky header mopub adapter usage example</string>
    <string name="sample_realm_list">Realm Sample</string>
    <string name="sample_realm_list_descr">Realm, Implement IItem interface</string>
    <string name="sample_diff_util">Diff Util Sample</string>
    <string name="sample_diff_util_descr">Diff Util, refresh list using DiffUtil</string>
    <string name="open_source">Open Source</string>
    <string name="search_title">Suche</string>
    <string name="action_undo">UNDO</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_item"></string>
    <string name="ItemEditName_Hint">item name</string>
    <string name="ItemEditDuration_Hint">duration</string>
    <string name="pause_when_time_runs_out">pause when time runs out</string>
    <string name="pause">PAUSE</string>
    <string name="start">START</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="pause_after">pause after</string>
    <string name="new_program">new program</string>
    <string name="ProgramEditDialog_Hint">Program name</string>
</resources>