<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_itemName"
        android:hint="@string/ItemEditName_Hint"
        android:autofillHints="no"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_duration"
        android:hint="@string/ItemEditDuration_Hint"
        android:autofillHints="no"
        android:inputType="time" />

    <CheckBox
        android:id="@+id/cb_pauseafter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_when_time_runs_out" />

</LinearLayout>